<resources>
    <string name="app_name">Contacts</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="action_settings">Settings</string>

    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <!-- Navigation menu -->
    <string name="menu_login">Login</string>
    <string name="menu_import">Import</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_share">Share</string>

    <!-- Options import contacts -->
    <string name="menu_import_title">Import from</string>
    <string name="menu_import_phone">My phone</string>
    <string name="menu_import_vcard">vCard</string>
    <string name="menu_import_csv">CSV</string>

    <!-- Add contact -->
    <string name="user_contact_name">Name</string>
    <string name="user_phone_number">Phone</string>
    <string name="user_email">Email</string>
    <string name="user_address">Address</string>
    <string name="btn_add_contact">Add Contact</string>

    <!-- List Contacts -->
    <string name="list_contact_name">Contact Name</string>
    <string name="list_contact_phone">Phone</string>
    <string name="list_contact_email">Email</string>
    <string name="list_contact_address">Address</string>

    <!-- Menu Context -->
    <string name="mn_list_contact_edit">Edit Contact</string>
    <string name="mn_list_contact_delete">Delete Contact</string>

    <string name="FACEBOOK_APP_ID">167282757208568</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">dae46c2cdeba35d7c878b01d05930ea1</string>

    <string name="permissions_get_accounts_message">
        Grant permission to read your email address from your device to pre-fill.
    </string>
    <string name="permissions_get_accounts_title">Read Email Address</string>
    <string name="permissions_read_phone_state_message">
        Grant permission to read your phone number from your device to pre-fill.
    </string>
    <string name="permissions_read_phone_state_title">Read Phone Number</string>
    <string name="permissions_receive_sms_message">
        Grant permission to read your SMS code from your device to pre-fill.
    </string>
    <string name="permissions_receive_sms_title">Read SMS Code</string>
    <string name="log_in_email_button">Log In via Email</string>
    <string name="log_in_phone_button">Log In via Phone</string>
    <string name="log_out_button">Log Out</string>
    <string name="error_label">Error</string>
    <string name="loading_placeholder">Loading&#8230;</string>
    <string name="user_id_label">Account ID</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="email_label">Email</string>
    <string name="na">NA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_options">Contact Options</string>
    <string name="edit_contact">Edit contact</string>
    <string name="delete_contact">Delete contact</string>
</resources>
