<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/addContactLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/addContactImage"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_person_outline" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtAddContactName"
        android:layout_marginTop="15dp"
        android:hint="@string/user_contact_name" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/txtAddContactPhone"
        android:layout_marginTop="15dp"
        android:hint="@string/user_phone_number" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/textAddContactEmail"
        android:hint="@string/user_email"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtAddContactAddress"
        android:hint="@string/user_address"
        android:inputType="textPostalAddress"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_contact"
        android:id="@+id/btnAdd"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:enabled="false" />

</LinearLayout>