<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/listContactImage" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/list_contact_name"
            android:id="@+id/listContactName"
            android:layout_gravity="left|center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_contact_phone"
            android:id="@+id/listContactPhone"
            android:layout_gravity="left|center_vertical"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_contact_email"
            android:id="@+id/listContactEmail"
            android:layout_gravity="left|center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_contact_address"
            android:id="@+id/listContactAddress"
            android:layout_gravity="left|center_vertical"/>
    </LinearLayout>

</LinearLayout>